--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="main.js"></script>
+    <script src="start.js"></script>
   </body>
 </html>
